Fixed review user ID assignment in backend